<resources>
    <string name="app_name">Little Game</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_index">首页</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_upgrade">更新</string>
    <string name="action_download">下载</string>
    <string name="action_feedback">反馈</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_paragraph">ParagraphActivity</string>
    <string name="action_Register_in">REGISTER</string>
</resources>
