<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_index"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_index"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_upgrade"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_upgrade"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_feedback"
        tools:ignore="AppCompatResource" />

</menu>